--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "homepage": "https://github.com/itsmeow/TikTokGPIO#readme",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "node-fetch": "^2.6.0",
+    "events": "^3.2.0",
+    "request": "^2.88.2",
+    "request-promise-native": "^1.0.9",
     "rpi-gpio": "^2.1.7"
   }
 }
